--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,14 +25,11 @@ jobs:
         cache: 'npm'
         
     - name: Set environment variables
-      - run: |
-        echo '${{ secrets.APP_SETTING_JSON }}' | base64 --decode >> ./appsettings.json
-        echo "IMAGE_NAME=asia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/e-submission-lp/frontend" >> $GITHUB_ENV
-        TAG=$([ $(echo $GITHUB_REF | cut -d'/' -f2) = "tags" ] && echo "production" || echo "${GITHUB_REF##*/}")
-        echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
-
-      - run: npm ci
-      - run: npm run build --if-present
+      run: |
+          echo '${{ secrets.APP_SETTING_JSON }}' | base64 --decode >> ./appsettings.json
+          echo "IMAGE_NAME=asia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/e-submission-lp/frontend" >> $GITHUB_ENV
+          TAG=$([ $(echo $GITHUB_REF | cut -d'/' -f2) = "tags" ] && echo "production" || echo "${GITHUB_REF##*/}")
+          echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
 
     - name: Login
       uses: google-github-actions/auth@v0
@@ -49,7 +46,7 @@ jobs:
     - name: Build Docker image
       run: |
         docker build \
-        -t $IMAGE_NAME:$IMAGE_TAG -f Dockerfile.backend .
+        -t $IMAGE_NAME:$IMAGE_TAG -f Dockerfile.frontend .
 
     - name: Push Docker image
       run: docker push $IMAGE_NAME:$IMAGE_TAG
