--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
       run: docker push $IMAGE_NAME:$IMAGE_TAG
       
     - name: Deploy on Development
-      if: github.ref == 'refs/heads/development'
+      if: github.ref == 'refs/heads/develop'
       uses: appleboy/ssh-action@master
       env:
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
@@ -68,7 +68,7 @@ jobs:
           export IMAGE_NAME=$IMAGE_NAME
           export IMAGE_TAG=$IMAGE_TAG
           # running stack deploy
-          docker stack deploy --with-registry-auth -c docker-compose.yml frontend
+          docker stack deploy --with-registry-auth -c docker-compose.yml e-submission-lp
 
     - name: Send notification
       uses: sarisia/actions-status-discord@v1
