--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/sentry": "^5.1.7",
+    "@sentry/vue": "^7.3.0",
     "@vue/composition-api": "^1.6.2",
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.1",
     "nuxt": "^2.15.8",
     "nuxt-healthcheck": "^1.0.1",
     "vue": "^2.6.14",
