--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,8 @@ jobs:
         
     - name: Set environment variables
       run: |
-          echo '${{ secrets.DOTENV }}' | base64 --decode >> .env
+          # Remove, not tested FE
+          # echo '${{ secrets.DOTENV }}' | base64 --decode >> .env
           echo "IMAGE_NAME=asia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/e-submission-lp/frontend" >> $GITHUB_ENV
           TAG=$([ $(echo $GITHUB_REF | cut -d'/' -f2) = "tags" ] && echo "production" || echo "${GITHUB_REF##*/}")
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
