--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.14",
     "vue-feather-icons": "^5.1.0",
     "vue-recaptcha": "^2.0.2",
+    "vue-select": "^3.20.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
