--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-healthcheck": "^1.0.1",
+    "v-idle": "^0.2.1",
     "vue": "^2.6.14",
     "vue-feather-icons": "^5.1.0",
     "vue-recaptcha": "^2.0.2",
