--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sentry/vue": "^7.3.0",
     "@vue/composition-api": "^1.6.2",
     "core-js": "^3.19.3",
+    "floating-vue": "^1.0.0-beta.18",
     "nuxt": "^2.15.8",
     "nuxt-healthcheck": "^1.0.1",
     "v-idle": "^0.2.1",
