--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/composition-api": "^1.6.2",
     "core-js": "^3.19.3",
     "floating-vue": "^1.0.0-beta.18",
+    "idle-vue": "^2.0.5",
     "nuxt": "^2.15.8",
     "nuxt-healthcheck": "^1.0.1",
     "v-idle": "^0.2.1",
