--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fe-landing",
+  "name": "Pengajuan after sales services BNI Life Digital",
   "version": "1.0.0",
   "private": true,
   "scripts": {
