--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
+    "autoprefixer": "^10.4.13",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "jest": "^27.4.4",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vue-jest": "^3.0.4"
   }
 }
